--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,15 @@ jobs:
         make -j
         make install
 
+    # Clone, build, and install libimobiledevice-glue (required for libirecovery)
+    - name: build libimobiledevice-glue
+      run: |
+        git clone https://github.com/libimobiledevice/libimobiledevice-glue.git
+        cd libimobiledevice-glue
+        ./autogen.sh CC=gcc CXX=g++ --enable-debug
+        make -j
+        make install
+
     # Clone and build libirecovery
     - name: build libirecovery
       run: |
